[package]

name = "mkv"
version = "0.0.1"
authors = ["Vitaly '_Vi' Shukela"]
license-file = "LICENSE"
homepage = "https://github.com/vi/mkv.rs"
repository = "https://github.com/vi/mkv.rs"
description = "[incomplete yet] Matroska (mkv,webm) files parser and generator implemented in Rust"
keywords = ["matroska", "mkv", "webm", "demuxer", "muxer"]

[dependencies]
byteorder = "0.3.5"
log = "0.3"
rustc-serialize = { version = "0.3", optional = true }
